--- a/frontend/kodein-log-frontend-android/src/main/AndroidManifest.xml
+++ b/frontend/kodein-log-frontend-android/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.kodein.log.print"/>
+          package="org.kodein.log.android"/>
