--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ on:
     branches: ['**']
 
 jobs:
-  native-all:
+  all:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -22,26 +22,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Excluding JVM and JS targets
-        run: echo excludeTargets = jvm,js >> gradle.properties
-        shell: bash
       - name: Assemble
         run: ./gradlew assemble
         shell: bash
       - name: Test
         run: ./gradlew check
         shell: bash
-  jvm-and-js:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Excluding Native targets
-        run: echo "excludeTargets = native" >> gradle.properties
-      - name: Assemble
-        run: ./gradlew assemble
-      - name: Test
-        run: ./gradlew check
