--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,25 @@ on:
     types: [published]
 
 jobs:
-  ubuntu-and-platform-independent-targets:
+  all-native:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macOS-latest, windows-latest]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Publish
+        env:
+          BINTRAY_USER: ${{ secrets.bintray_user }}
+          BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
+          BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
+        run: ./gradlew hostOnlyPublish
+  platform-independent-targets:
+    needs: all-native
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -14,29 +32,8 @@ jobs:
         with:
           java-version: 11
       - name: Publish
-        uses: eskatos/gradle-command-action@v1
         env:
           BINTRAY_USER: ${{ secrets.bintray_user }}
           BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
           BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
-        with:
-          arguments: publish
-  macos-and-windows:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-latest, macOS-latest]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Publish
-        uses: eskatos/gradle-command-action@v1
-        env:
-          BINTRAY_USER: ${{ secrets.bintray_user }}
-          BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
-          BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
-        with:
-          arguments: hostOnlyPublish
+        run: ./gradlew publish
