--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - master
-      - 'snapshot/[0-9]+.[0-9]+'
+      - 'snapshot/*'
+      - 'kotlin-*'
     paths-ignore:
       - '**.md'
       - '**.adoc'
@@ -13,54 +14,39 @@ on:
       - '!./github/workflow/snapshot.yml'
 
 jobs:
-  ubuntu-and-platform-independent-targets:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Assemble
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: assemble
-      - name: Check
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: check
-      - name: Publish
-        uses: eskatos/gradle-command-action@v1
-        env:
-          BINTRAY_USER: ${{ secrets.bintray_user }}
-          BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
-          BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
-        with:
-          arguments: publish -PsnapshotNumber=${{ github.run_number }}
-  macos-and-windows-targets:
+  all-native:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, macOS-latest]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Assemble
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: assemble
       - name: Check
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: hostOnlyTest
+        run: ./gradlew hostOnlyTest
       - name: Publish
-        uses: eskatos/gradle-command-action@v1
         env:
           BINTRAY_USER: ${{ secrets.bintray_user }}
           BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
           BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
+        run: ./gradlew hostOnlyPublish -PsnapshotNumber="$GITHUB_RUN_NUMBER" -PgitRef="${GITHUB_REF#refs/heads/*}"
+  platform-independent-targets:
+    needs: all-native
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
         with:
-          arguments: hostOnlyPublish -PsnapshotNumber=${{ github.run_number }}
+          java-version: 11
+      - name: Check
+        run: ./gradlew check --no-daemon
+      - name: Publish
+        env:
+          BINTRAY_USER: ${{ secrets.bintray_user }}
+          BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
+          BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
+        run: ./gradlew publish -PsnapshotNumber="$GITHUB_RUN_NUMBER" -PgitRef="${GITHUB_REF#refs/heads/*}"
