--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches-ignore:
       - master
-      - '[0-9]+.[0-9]+'
-      - 'snapshot/[0-9]+.[0-9]+'
+      - 'snapshot/*'
+      - 'kotlin-*'
     paths-ignore:
       - '**.md'
       - '**.adoc'
@@ -14,7 +14,6 @@ on:
       - '!./github/workflow/test.yml'
   pull_request:
     branches:
-      - stable
       - master
     paths-ignore:
       - '**.md'
@@ -36,10 +35,6 @@ jobs:
         with:
           java-version: 11
       - name: Assemble
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: assemble
+        run: ./gradlew assemble
       - name: Check
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: check
+        run: ./gradlew check
