--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,12 @@ jobs:
         os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
+      - name: Cached Konan
+        uses: actions/cache@v2
+        with:
+          path: ~/.konan
+          key: ${{ runner.os }}-konan-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-konan-
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -19,17 +25,24 @@ jobs:
       - name: Setup Android SDK dir
         run: echo sdk.dir=$ANDROID_HOME > local.properties
       - name: Publish
+        uses: eskatos/gradle-command-action@v1
         env:
           BINTRAY_USER: ${{ secrets.bintray_user }}
           BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
           BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
-        run: ./gradlew hostOnlyPublish
-        shell: bash
+        with:
+          arguments: hostOnlyPublish
   platform-independent-targets:
     needs: all-native
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Cached Konan
+        uses: actions/cache@v2
+        with:
+          path: ~/.konan
+          key: ${{ runner.os }}-konan-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-konan-
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -37,9 +50,10 @@ jobs:
       - name: Setup Android SDK dir
         run: echo sdk.dir=$ANDROID_HOME > local.properties
       - name: Publish
+        uses: eskatos/gradle-command-action@v1
         env:
           BINTRAY_USER: ${{ secrets.bintray_user }}
           BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
           BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
-        run: ./gradlew publish
-        shell: bash
+        with:
+          arguments: publish
