--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -21,6 +21,12 @@ jobs:
         os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
+      - name: Cached Konan
+        uses: actions/cache@v2
+        with:
+          path: ~/.konan
+          key: ${{ runner.os }}-konan-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-konan-
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -28,19 +34,29 @@ jobs:
       - name: Setup Android SDK dir
         run: echo sdk.dir=$ANDROID_HOME > local.properties
       - name: Check
-        run: ./gradlew hostOnlyTest
+        uses: eskatos/gradle-command-action@v1
+        with:
+          wrapper-cache-enabled: true
+          arguments: hostOnlyTest
       - name: Publish
+        uses: eskatos/gradle-command-action@v1
         env:
           BINTRAY_USER: ${{ secrets.bintray_user }}
           BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
           BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
-        run: ./gradlew hostOnlyPublish -PsnapshotNumber="$GITHUB_RUN_NUMBER" -PgitRef="${GITHUB_REF#refs/heads/*}"
-        shell: bash
+        with:
+          arguments: hostOnlyPublish -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}  -PgitSha=${{ github.sha }}
   platform-independent-targets:
     needs: all-native
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Cached Konan
+        uses: actions/cache@v2
+        with:
+          path: ~/.konan
+          key: ${{ runner.os }}-konan-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-konan-
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -48,11 +64,15 @@ jobs:
       - name: Setup Android SDK dir
         run: echo sdk.dir=$ANDROID_HOME > local.properties
       - name: Check
-        run: ./gradlew check --no-daemon
+        uses: eskatos/gradle-command-action@v1
+        with:
+          wrapper-cache-enabled: true
+          arguments: check
       - name: Publish
+        uses: eskatos/gradle-command-action@v1
         env:
           BINTRAY_USER: ${{ secrets.bintray_user }}
           BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
           BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
-        run: ./gradlew publish -PsnapshotNumber="$GITHUB_RUN_NUMBER" -PgitRef="${GITHUB_REF#refs/heads/*}"
-        shell: bash
+        with:
+          arguments: publish -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}  -PgitSha=${{ github.sha }}
