--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,15 +30,21 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
       - uses: actions/checkout@v2
+      - name: Cached Konan
+        uses: actions/cache@v2
+        with:
+          path: ~/.konan
+          key: ${{ runner.os }}-konan-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-konan-
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
       - name: Setup Android SDK dir
         run: echo sdk.dir=$ANDROID_HOME > local.properties
-      - name: Assemble
-        run: ./gradlew assemble
-        shell: bash
       - name: Check
-        run: ./gradlew check
-        shell: bash
+        uses: eskatos/gradle-command-action@v1
+        with:
+          wrapper-cache-enabled: true
+          dependencies-cache-enabled: true
+          arguments: check
