--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,55 +5,91 @@ on:
     types: [published]
 
 jobs:
-  all-native:
+
+  build-upload:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [macOS-latest, windows-latest]
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out
+        uses: actions/checkout@v2
       - name: Cached Konan
         uses: actions/cache@v2
         with:
           path: ~/.konan
           key: ${{ runner.os }}-konan-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
           restore-keys: ${{ runner.os }}-konan-
+      - name: Cached Gradle
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-gradle-
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Setup Android SDK dir
-        run: echo sdk.dir=$ANDROID_HOME > local.properties
-      - name: Publish
-        uses: eskatos/gradle-command-action@v1
+      - name: Check
+        run: ./gradlew hostOnlyTest
+        shell: bash
+      - name: Upload
         env:
           BINTRAY_USER: ${{ secrets.bintray_user }}
           BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
           BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
-        with:
-          arguments: hostOnlyPublish
-  platform-independent-targets:
-    needs: all-native
+        run: ./gradlew hostOnlyPublish
+        shell: bash
+      - name: Discard
+        if: ${{ failure() || cancelled() }}
+        env:
+          BINTRAY_USER: ${{ secrets.bintray_user }}
+          BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
+        run: ./gradlew postBintrayDiscard
+        shell: bash
+
+  build-upload-publish:
+    needs: build-upload
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out
+        uses: actions/checkout@v2
       - name: Cached Konan
         uses: actions/cache@v2
         with:
           path: ~/.konan
           key: ${{ runner.os }}-konan-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
           restore-keys: ${{ runner.os }}-konan-
+      - name: Cached Gradle
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-gradle-
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Setup Android SDK dir
-        run: echo sdk.dir=$ANDROID_HOME > local.properties
-      - name: Publish
-        uses: eskatos/gradle-command-action@v1
+      - name: Check
+        run: ./gradlew check
+        shell: bash
+      - name: Upload
         env:
           BINTRAY_USER: ${{ secrets.bintray_user }}
           BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
           BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
-        with:
-          arguments: publish
+        run: ./gradlew publish
+        shell: bash
+      - name: Discard
+        if: ${{ failure() || cancelled() }}
+        env:
+          BINTRAY_USER: ${{ secrets.bintray_user }}
+          BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
+        run: ./gradlew postBintrayDiscard
+        shell: bash
+      - name: Publish
+        env:
+          BINTRAY_USER: ${{ secrets.bintray_user }}
+          BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
+        run: ./gradlew postBintrayPublish
+        shell: bash
