--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,20 +1,7 @@
 name: assemble and check
 
 on:
-  push:
-    branches-ignore:
-      - master
-      - 'snapshot/*'
-      - 'kotlin-*'
-    paths-ignore:
-      - '**.md'
-      - '**.adoc'
-      - '**/.gitignore'
-      - './github/**'
-      - '!./github/workflow/test.yml'
   pull_request:
-    branches:
-      - master
     paths-ignore:
       - '**.md'
       - '**.adoc'
@@ -23,28 +10,31 @@ on:
       - '!./github/workflow/test.yml'
 
 jobs:
-  build-check-all:
+
+  check:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out
+        uses: actions/checkout@v2
       - name: Cached Konan
         uses: actions/cache@v2
         with:
           path: ~/.konan
           key: ${{ runner.os }}-konan-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
           restore-keys: ${{ runner.os }}-konan-
+      - name: Cached Gradle
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-gradle-
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Setup Android SDK dir
-        run: echo sdk.dir=$ANDROID_HOME > local.properties
       - name: Check
-        uses: eskatos/gradle-command-action@v1
-        with:
-          wrapper-cache-enabled: true
-          dependencies-cache-enabled: true
-          arguments: check
+        run: ./gradlew check
+        shell: bash
