--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -13,6 +13,11 @@ on:
       - './github/**'
       - '!./github/workflow/snapshot.yml'
 
+env:
+  BINTRAY_USER: ${{ secrets.bintray_user }}
+  BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
+  BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
+
 jobs:
 
   build-upload:
@@ -39,21 +44,16 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Setup gradle.properties
+        run: cp .github/conf/ci.gradle.properties gradle.properties
       - name: Check
         run: ./gradlew hostOnlyTest
         shell: bash
       - name: Upload
-        env:
-          BINTRAY_USER: ${{ secrets.bintray_user }}
-          BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
-          BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
         run: ./gradlew hostOnlyPublish -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}
         shell: bash
       - name: Discard
         if: ${{ failure() || cancelled() }}
-        env:
-          BINTRAY_USER: ${{ secrets.bintray_user }}
-          BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
         run: ./gradlew postBintrayDiscard -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}
         shell: bash
 
@@ -79,26 +79,18 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Setup gradle.properties
+        run: cp .github/conf/ci.gradle.properties gradle.properties
       - name: Check
         run: ./gradlew check
         shell: bash
       - name: Upload
-        env:
-          BINTRAY_USER: ${{ secrets.bintray_user }}
-          BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
-          BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
         run: ./gradlew publish -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}
         shell: bash
       - name: Discard
         if: ${{ failure() || cancelled() }}
-        env:
-          BINTRAY_USER: ${{ secrets.bintray_user }}
-          BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
         run: ./gradlew postBintrayDiscard -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}
         shell: bash
       - name: Publish
-        env:
-          BINTRAY_USER: ${{ secrets.bintray_user }}
-          BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
         run: ./gradlew postBintrayPublish -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}
         shell: bash
