--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: assemble and check
+name: test
 
 on:
   pull_request:
@@ -35,6 +35,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Setup gradle.properties
+        run: cp .github/conf/ci.gradle.properties gradle.properties
       - name: Check
         run: ./gradlew check
         shell: bash
