--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ kotlin.incremental.multiplatform = true
 kotlin.parallel.tasks.in.project = true
 #kotlin.mpp.enableGranularSourceSetsMetadata = true
 kotlin.native.enableDependencyPropagation = false
+kotlin.mpp.stability.nowarn=true
 
 # Android
 android.useAndroidX = true
