--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -14,17 +14,15 @@ on:
       - '!./github/workflow/snapshot.yml'
 
 env:
-  BINTRAY_USER: ${{ secrets.bintray_user }}
-  BINTRAY_APIKEY: ${{ secrets.bintray_apikey }}
-  BINTRAY_USER_ORG: ${{ secrets.bintray_user_org }}
+  SONATYPE_USERNAME: ${{ secrets.sonatype_username }}
+  SONATYPE_PASSWORD: ${{ secrets.sonatype_password }}
 
 jobs:
-
   build-upload:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-latest, windows-latest]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
       - name: Check out
         uses: actions/checkout@v2
@@ -44,49 +42,29 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Check
+      # Host only for MacOS / Windows
+      - name: Check (macos / windows)
+        if: matrix.os != 'ubuntu-latest'
         run: ./gradlew hostOnlyTest
         shell: bash
-      - name: Upload
+      - name: Check Android
+        if: matrix.os == 'macOS-latest'
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          ndk: 21.3.6528147
+          cmake: 3.10.2.4988404
+          script: ./gradlew connectedCheck
+      - name: Upload (macos / windows)
+        if: matrix.os != 'ubuntu-latest'
         run: ./gradlew hostOnlyPublish -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}
         shell: bash
-      - name: Discard
-        if: ${{ failure() || cancelled() }}
-        run: ./gradlew postBintrayDiscard -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}
-        shell: bash
-
-  build-upload-publish:
-    needs: build-upload
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out
-        uses: actions/checkout@v2
-      - name: Cached Konan
-        uses: actions/cache@v2
-        with:
-          path: ~/.konan
-          key: ${{ runner.os }}-konan-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
-          restore-keys: ${{ runner.os }}-konan-
-      - name: Cached Gradle
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
-          restore-keys: ${{ runner.os }}-gradle-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Check
+      # Linux / JVM / JS
+      - name: Check (ubuntu)
+        if: matrix.os == 'ubuntu-latest'
         run: ./gradlew check
         shell: bash
-      - name: Upload
-        run: ./gradlew publish -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}
-        shell: bash
-      - name: Discard
-        if: ${{ failure() || cancelled() }}
-        run: ./gradlew postBintrayDiscard -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}
-        shell: bash
-      - name: Publish
-        run: ./gradlew postBintrayPublish -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}
+      - name: Upload (ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: ./gradlew publishAllPublicationsToOssrhStagingRepository -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}
         shell: bash
