--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -49,7 +49,7 @@ jobs:
         shell: bash
       - name: Upload (macos / windows)
         if: matrix.os != 'ubuntu-latest'
-        run: ./gradlew hostOnlyPublish -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}
+        run: ./gradlew hostOnlyPublish -PgitRef=${{ github.ref }} -Psnapshot=true
         shell: bash
       # Linux / JVM / JS
       - name: Check (ubuntu)
@@ -58,5 +58,5 @@ jobs:
         shell: bash
       - name: Upload (ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        run: ./gradlew publishAllPublicationsToOssrhStagingRepository -PsnapshotNumber=${{ github.run_number }} -PgitRef=${{ github.ref }}
+        run: ./gradlew publishAllPublicationsToOssrhStagingRepository -PgitRef=${{ github.ref }} -Psnapshot=true
         shell: bash
