--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,11 @@ org.gradle.jvmargs = -Xmx4g -XX:MaxMetaspaceSize=2g
 org.gradle.parallel = true
 
 # Kotlin
-kotlin.native.ignoreDisabledTargets = true
-kotlin.incremental.multiplatform = true
-kotlin.parallel.tasks.in.project = true
-kotlin.mpp.hierarchicalStructureSupport=false
-kotlin.mpp.stability.nowarn=true
-# To enable compatibility with non-hierarchical projects
-# https://kotlinlang.org/docs/multiplatform-hierarchy.html#for-library-authors
-kotlin.mpp.enableCompatibilityMetadataVariant=true
+kotlin.mpp.enableCInteropCommonization=true
 
 # Android
-android.useAndroidX = true
+android.enableJetifier=true
+android.useAndroidX=true
+
+# KIGP
+org.kodein.jvm-version=17
