Update default branch in snapshot workflow to 'main'

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -3,7 +3,7 @@ name: build and publish a snapshot
 on:
   push:
     branches:
-      - master
+      - main
       - 'snapshot/*'
       - 'kotlin-*'
     paths-ignore:
